--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -26,7 +26,7 @@
     <!-- Навигационная панель -->
     <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #417690;">
         <div class="container">
-            <a class="navbar-brand" href="{% url 'home' %}">База рекламаций</a>
+            <a class="navbar-brand" href="{% url 'home' %}">Главная</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
             </button>
