--- a/База_рекламаций/reclamationhub/reports/templates/reports/accept_defect.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/accept_defect.html
@@ -58,7 +58,7 @@
     </div>
     {% endif %}
 
-    <!-- Блок для отображения отчета и скачивания -->
+    <!-- Блок для отображения отчета -->
     {% if download_info %}
     <div class="row mt-4">
         <div class="col-12">
