--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -77,7 +77,7 @@
     <!-- Footer -->
     <footer class="footer mt-auto py-3 bg-light">
         <div class="container">
-            <span class="text-muted">© {% now "Y" %} База рекламаций ОТК</span>
+            <span class="text-muted">© Dev by VIM - {% now "Y" %} База рекламаций ОТК</span>
         </div>
     </footer>
 
