--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     {% csrf_token %}
     <title>{% block title %}База рекламаций ОТК{% endblock %}</title>
+    <link rel="icon" type="image/png" sizes="32x32" href="{% static 'favicon.png' %}">
     <!-- Bootstrap CSS -->
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
