--- a/База_рекламаций/reclamationhub/templates/base.html
+++ b/База_рекламаций/reclamationhub/templates/base.html
@@ -53,7 +53,7 @@
                     <li class="nav-item">
                         <!-- <a class="nav-link text-white" href="#" onclick="alert('Раздел находится в разработке'); return false;"> -->
                         <a class="nav-link text-white" href="{% url 'reports:analytics' %}" class="nav-link">
-                            Аналитика
+                            Справки и отчеты
                         </a>
                     </li>
                 </ul>
