--- a/База_рекламаций/reclamationhub/reports/templates/reports/enquiry_period.html
+++ b/База_рекламаций/reclamationhub/reports/templates/reports/enquiry_period.html
@@ -47,7 +47,7 @@
                     <h5>Генерация справки</h5>
                 </div>
                 <div class="card-body">
-                    <p>Формирование справки по количеству дефектов за период</p>
+                    <p>Формирование справки по количеству дефектов за период {% now "Y" %} года</p>
 
                     <form method="post">
                         {% csrf_token %}
